[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.4.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
dotenv = "0.15.0"
sqlx = { version = "0.7.2", features = ["runtime-async-std-native-tls", "postgres"] }
cargo-modules = "0.10.0"
